--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,32 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://fonts.gstatic.com"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="stylesheet" href="/style.css"> -->
-    <title>FEC Demo</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
-    <div id="photos"></div>
-    <!-- <div id="reservations"></div> -->
-    <!-- <div id="app"></div> -->
-    <!-- <div id="recommendations"></div> -->
-    <!-- <script src="/lib/react.development.js"></script>
-    <script src="/lib/react-dom.development.js"></script> -->
+  <body class="container">
+    <div id="cell-1">
+      <div id="photos"></div>
+    </div>
+    <div class="break">
+    </div>
+    <div id="cell-2">
+      <div id="reservation"></div>
+    </div>
+    <div id="cell-3">
+      <div id="app"></div>
+    </div>
+    <div id="cell-4">
+      <div id="recommendations"></div>
+    </div>
+    <script src="/lib/react.development.js"></script>
+    <script src="/lib/react-dom.development.js"></script>
     <script src="http://localhost:3001/bundle.js"></script>
-    <!-- <script src="http://localhost:3002/bundle.js"></script> -->
-    <!-- <script src="http://localhost:3000/bundle.js"></script> -->
-    <!-- <script src="http://localhost:3009/bundle.js"></script> -->
-    <script src="https://kit.fontawesome.com/257b0c273e.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWJ0bf8pkAp6a.woff2"></script> -->
-
-    <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
+    <script src="http://localhost:3002/bundle.js"></script>
+    <script src="http://localhost:3000/bundle.js"></script>
+    <script src="http://localhost:3009/bundle.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/257b0c273e.js" crossorigin="anonymous"></script> -->
   </body>
 </html>
