--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,12 @@
       <div id="recommendations"></div>
     </div>
     <script src="/lib/react.development.js"></script>
-    <script src="/lib/react-dom.development.js"></script>
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3000/bundle.js"></script>
-    <script src="http://localhost:3009/bundle.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/257b0c273e.js" crossorigin="anonymous"></script> -->
+    <script src="/lib/-react-dom.development.js"></script>
+
+    <script src="http://ec2-3-101-43-150.us-west-1.compute.amazonaws.com:8080/bundle.js"></script>
+    <script src="http://ec2-13-59-243-8.us-east-2.compute.amazonaws.com/bundle.js"></script>
+    <script src="http://ec2-3-89-251-90.compute-1.amazonaws.com:3009/bundle.js"></script>
+    <!-- <script src="http://localhost:3009/bundle.js"></script> -->
+    <script src="https://kit.fontawesome.com/257b0c273e.js" crossorigin="anonymous"></script>
   </body>
 </html>
